<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Fundamental Browser</string>
    <string name="space_redirected_space">" (redirected) "</string>
    <string name="failed_to_parse">Failed to parse ‘%1$s’</string>
    <string name="log">Log</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="true_lowercase">true</string>
    <string name="false_lowercase">false</string>
    <string name="none">None</string>
    <string name="main_url_field_hint">Enter URL or text</string>
    <string name="main_search_field_hint1">Text to find</string>
    <string name="main_search_field_hint2">Text to find</string>
    <string name="decode">Decode</string>
    <string name="clear">Clear</string>
    <string name="restore">Restore</string>
    <string name="search">Search</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="close">Close</string>
    <string name="text_default">Default</string>
    <string name="tap_to_set">Tap to set</string>
    <string name="main_button_load">Load</string>
    <string name="main_button_run">Run</string>
    <string name="settings_title_options">Options</string>
    <string name="allow_javascript">Allow JavaScript</string>
    <string name="load_images">Load images</string>
    <string name="load_resources">Load resources</string>
    <string name="setting_foreground_logging">Foreground logging</string>
    <string name="accept_cookies">Accept cookies</string>
    <string name="accept_3rd_party_cookies">Accept third-party cookies</string>
    <string name="settings_title_max_log_msg">Max log messages</string>
    <string name="settings_max_log_msg_extra_text">This is the maximum number of log messages.</string>
    <string name="settings_title_search_url">Search URL</string>
    <string name="settings_search_url_extra_text">This is the URL that will be used when the search button is pressed, and will be joined with the search keywords to form an actual URL. The search button can only be used when this is set.\nExample: <code>https://example.com/search?q=</code></string>
    <string name="settings_title_experimental">Experimental</string>
    <string name="settings_title_clear_data">Clear data</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_usernames_passwords">Clear usernames and passwords</string>
    <string name="clear_cookies">Clear cookies</string>
    <string name="settings_title_about">About</string>
    <string name="settings_text1">The source code of this app is available at https://github.com/sls1005/FundamentalBrowser, under the MIT License.</string>
    <string name="settings_text2">Disclaimer: JavaScript is a trademark or registered trademark of Oracle Corporation.</string>
    <string name="see_doc">See documentation</string>
    <string name="see_libs">See open source libraries used</string>
    <string name="remove_spaces_and_linebreaks_when_loading">Remove spaces and linebreaks when loading a URL</string>
    <string name="switch_remove_spaces_and_linebreaks_extra_text">It is recommended to turn this on.</string>
    <string name="show_button_run">Show button for running input as a script</string>
    <string name="switch_show_button_run_extra_text">This only works if JavaScript is enabled.</string>
    <string name="use_customized_user_agent">Use customized user agent</string>
    <string name="switch_custom_user_agent_extra_text">When disabled or not set, the default will be used.\n\n<b>Warning:</b> Please note that the use of highly customized user agent may result in privacy-related issues as described in https://datatracker.ietf.org/doc/html/rfc7231#section-9.7 .</string>
    <string name="desktop_mode">Desktop mode</string>
    <string name="switch_desktop_mode_extra_text">This is implemented by changing the user agent of this browser and thus can result in privacy-related issues as described in https://datatracker.ietf.org/doc/html/rfc7231#section-9.7 .\nIf this doesn\'t work, please consider using a custom user agent. See below for more information about customized user agents.</string>
    <string name="settings_title_advanced_sertings">Advanced settings</string>
    <string name="allow_http">HTTP-compatible mode</string>
    <string name="switch_allow_http_extra_text">Allow using HTTP (not HTTPS) as the communication protocol.\n\n<b>Warning:</b> HTTP is an insecure protocol and is different from HTTPS. It is recommended to keep this off unless you are testing your own server in LAN.</string>
    <string name="manually_set_languages">Set preferred languages</string>
    <string name="add_language">Add a language</string>
    <string name="switch_manually_set_languages_extra_string">This specifies the preferred languages of webpages, not the language of the UI.\nWhen disabled, the default will be used. If enabled but not set, no language tag will be sent.\nIf this doesn\'t work, please consider changing the language of this app. If your device supports doing so, the option for changing the language of this application will appear in the device settings.\nA website may ignore this.\n\n<b>Warning:</b> Please note that the use of highly customized language tags may result in privacy-related issues as described in https://datatracker.ietf.org/doc/html/rfc7231#section-9.7 .</string>
    <string name="clear_log_before_running_script">Clear log before running a script</string>
    <string name="autoscroll_log_msgs">Autoscroll log messages</string>
    <string name="allow_js_when_loading_url_that_is_from_another_app">Allow the use of JavaScript when loading a URL that is from another application</string>
    <string name="language_selection_title1">Select a language</string>
    <string name="language">Language</string>
    <string name="weight">Weight</string>
    <string name="language_selection_extra_text">The higher the weight, the higher the priority is. A language with higher priority is considered preferred. Default means highest priority.</string>
    <string name="menu1_action_show_or_hide_url_bar">Show/hide URL bar</string>
    <string name="menu1_action_edit_url">Edit URL</string>
    <string name="menu1_action_refresh">Refresh</string>
    <string name="menu1_js">JavaScript</string>
    <string name="menu1_action_search_content">Search content</string>
    <string name="menu1_action_new_window">New window</string>
    <string name="menu1_action_view_log">View log</string>
    <string name="doc_title1">1. UI</string>
    <string name="doc_title1_1">i. The URL bar</string>
    <string name="doc_text1_1_1">The URL bar of this app is a little different from that of other browsers. It is still the place where the URL is displayed or edited, but now it is usually hidden and only shows up when the user needs it.\n\nWhen you need to see the URL bar, tap on the ‘<code>://</code>’ symbol if it is present in the top bar, or use the ‘Show/hide URL bar’ or ‘Edit URL’ option from the menu that is opened by tapping the three-dot icon in the top bar. Tapping the ‘<code>://</code>’ symbol once again (if it is present) will close the URL bar if it is already opened.\n\nThe URL bar allows multiline editing, that is, text that is too long will be wrapped to the next line. This makes it easier to view and edit when the URL is very long.\n\nThere are several buttons at the bottom of the URL bar. Those are:\n</string>
    <string name="doc_text1_1_2"><b>Load</b>: load the web page corresponding to a given URL. Unlike the ‘Search’ button, this does not do search.\n\n<b>Search</b>: search the web by using the text in the URL field as keywords. Only usable if the ‘search URL’ is set. Unlike the ‘Load’ button, this will not load a URL but… will search for it.\n\n<b>Copy</b>: copy the text in the URL field, or the selected text in the URL field, if any.\n\n<b>Paste</b>: paste the text to the URL field, either at the end of text or at the selected position if any text is selected.\n\n<b>Clear</b>: clear the URL field, removing all text.\n\n<b>Restore</b>: replace any text in the URL field with a previously loaded URL. This can also be used if the field is empty, in which case the previously loaded URL will still be restored, if any.\n\n<b>Decode</b>: decode the URL if it is pct-encoded. See https://datatracker.ietf.org/doc/html/rfc3986 for more details about pct-encoding.\n\n<b>Close</b>: close the URL bar.\n</string>
    <string name="doc_title1_2">ii. The main window</string>
    <string name="doc_text1_2">This is where the web page is displayed.\n</string>
    <string name="doc_title1_3">iii. The log</string>
    <string name="doc_text1_3">The log is a record of the web requests this app has made, including the requests for images, scripts, data (e.g., JSON) and other kinds of resources. It also contains the output of each script that has been run.\n\nTo open the log, use the ‘view log’ option from the option menu. The option is only available if there is anything in the log.\n\nEach request-related entry consists of:\n  (1) the method, e.g., GET.\n  (2) if it is the result of a redirection, a string that indicates so.\n  (3) the URL associated with that request.\n\nTo search for a specific record in the log, use the ‘Search in log’ option from the option menu. The option will be available when you open the menu while the log is opened.\n\nUsing the back button of the device (or an equivalent gesture) will close the log.\n</string>
    <string name="doc_title2">2. Usage</string>
    <string name="doc_title2_1">i. Load a URL</string>
    <string name="doc_text2_1">To load a URL, paste it to the URL field and then tap ‘Load’.\n</string>
    <string name="doc_title2_2">ii. Search the web</string>
    <string name="doc_text2_2">To do search, firstly set the search URL in settings and enter the keyword, and then tap ‘Search’.\n</string>
    <string name="doc_title2_3">iii. Search a web page</string>
    <string name="doc_text2_3">To do search in a web page, use the ‘search content’ option from the option menu (only available if any page is loaded).\n</string>
    <string name="doc_title2_4">iv. View the source code</string>
    <string name="doc_text2_4">To see the source code of a web page, add ‘view-source:’ to the start of the URL that points to it. For example: ‘<code>view-source:https://example.com/index.html</code>’. This usage is supported through the framework.\n\nAlternatively, you can use the ‘view the source code of this page’ option hidden in the submenu that is opened by tapping the three-dot icon and then tapping ‘more’.\n\nTo search in the source code, you may use the ‘search content’ option as if it were a normal web page.\n\nIf none of these methods works, please consider using the JavaScript console of this app to access the document object.\n</string>
    <string name="doc_title2_5">v. Console and REPL</string>
    <string name="doc_text2_5">To use the console and REPL features, input some code (should normally be JS code) into the URL field and use the ‘Run’ button (enabled in settings) to execute it. The execution of such code, even in the console mode, is never handled by this app, but by the framework or system. This app only implemented the logic to display the log messages.\n</string>
    <string name="doc_title2_6">vi. Logging</string>
    <string name="doc_text2_6">The ‘foreground logging’ feature gives you some meta-information about the page you are reading. The format of it is the same as that of a log entry. See above for more details.\n</string>
    <string name="theme_default">Default (System default or Dark)</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_light">Light</string>
</resources>