<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_display_or_hide_url_bar"
        android:title="@string/menu1_action_show_or_hide_url_bar"
        android:icon="@drawable/colondoubleslash"
        app:showAsAction="ifRoom"/>
    <group android:id="@+id/group_url">
        <item
            android:id="@+id/action_edit_url"
            android:title="@string/menu1_action_edit_url"
            app:showAsAction="never"/>
    </group>
    <group android:id="@+id/group_page">
        <item
            android:id="@+id/action_refresh"
            android:title="@string/menu1_action_refresh"
            app:showAsAction="never"/>
    </group>
    <item
        android:id="@+id/action_enable_disable_js"
        android:title="@string/menu1_js"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_disable_images"
        android:title="@string/load_images"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_disable_resources"
        android:title="@string/load_resources"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_disable_foreground_logging"
        android:title="@string/foreground_logging"
        android:checkable="true"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_enable_disable_desktop_mode"
        android:title="@string/desktop_mode"
        android:checkable="true"
        app:showAsAction="never"/>
    <group android:id="@+id/group_content_search">
        <item
            android:id="@+id/action_content_search"
            android:title="@string/menu1_action_search_content"
            app:showAsAction="never"/>
    </group>
    <item
        android:id="@+id/action_new_window"
        android:title="@string/menu1_action_new_window"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    <group android:id="@+id/group_log">
        <item
            android:id="@+id/action_view_log"
            android:title="@string/menu1_action_view_log"
            app:showAsAction="never"/>
    </group>
</menu>