<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="top|start">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="20sp"
            android:text="@string/doc_title1"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title1_1"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text1_1_1"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="25dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text1_1_2"
            android:textColor="?android:attr/textColorPrimary"
            android:autoLink="web"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title1_2"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text1_2"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title1_3"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text1_3"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2_1"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text2_1"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2_2"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text2_2"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2_3"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text2_3"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2_4"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text2_4"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2_5"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text2_5"
            android:textColor="?android:attr/textColorPrimary"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="15dp"
            android:paddingEnd="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="5dp"
            android:textSize="18sp"
            android:text="@string/doc_title2_6"
            android:textColor="?android:attr/textColorPrimary"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textSize="18sp"
            android:text="@string/doc_text2_6"
            android:textColor="?android:attr/textColorPrimary"/>
    </LinearLayout>
</ScrollView>