<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top|start">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="18sp"
        android:text="@string/language_selection_title1"
        android:textColor="?android:attr/colorPrimary"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textSize="14sp"
        android:text="@string/language"
        android:textColor="?android:attr/colorPrimary"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/language"
        android:layout_marginStart="20dp"
        android:layout_width="250dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:text="@string/weight"
        android:textColor="?android:attr/colorPrimary"
        android:textStyle="bold"/>
    <Spinner
        android:id="@+id/weight"
        android:layout_marginStart="20dp"
        android:layout_width="150dp"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:textSize="12sp"
        android:text="@string/language_selection_extra_text"
        android:textColor="?android:attr/textColorPrimary"/>
</LinearLayout>
