<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RadioGroup
        android:id="@+id/theme_selection_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">
        <RadioButton
            android:id="@+id/theme_option_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/theme_default"
            android:textColor="?android:attr/textColorPrimary"/>
        <RadioButton
            android:id="@+id/theme_option_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/theme_light"
            android:textColor="?android:attr/textColorPrimary"/>
        <RadioButton
            android:id="@+id/theme_option_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/theme_dark"
            android:textColor="?android:attr/textColorPrimary"/>
    </RadioGroup>
</ScrollView>