<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top">
    <EditText
        android:id="@+id/url_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="20dp"
        android:maxHeight="500dp"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:inputType="textMultiLine|textUri"
        android:textSize="20sp"
        android:fontFamily="monospace"
        android:hint="@string/main_url_field_hint"
        android:enabled="true"/>
    <HorizontalScrollView
        android:id="@+id/button_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:gravity="end">
            <Button
                android:id="@+id/button_decode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/decode"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/clear"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_restore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/restore"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/search"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/copy"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_paste"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/paste"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_go"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/main_button_go"
                android:textAllCaps="false"/>
            <Button
                android:id="@+id/button_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="Run"
                android:textAllCaps="false"
                android:visibility="gone"/>
        </LinearLayout>
    </HorizontalScrollView>
    <ScrollView
        android:id="@+id/scroll_view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <TextView
            android:id="@+id/log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            android:textColor="?android:attr/textColorPrimary"
            android:fontFamily="monospace"
            android:hyphenationFrequency="none"
            android:textIsSelectable="true"
            android:visibility="gone"/>
    </ScrollView>
    <WebView
        android:id="@+id/view1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>